--- a/KID/Views/MenuView.xaml
+++ b/KID/Views/MenuView.xaml
@@ -29,6 +29,10 @@
             </MenuItem>
             <MenuItem Header="{localization:Localization Menu_View}">
                 <MenuItem Header="{localization:Localization Menu_Theme}" />
+                <MenuItem Header="{localization:Localization Menu_ChangeLanguage}">
+                    <MenuItem Header="{localization:Localization Language_Russian}" Command="{Binding ChangeLanguageToRussianCommand}" />
+                    <MenuItem Header="{localization:Localization Language_English}" Command="{Binding ChangeLanguageToEnglishCommand}" />
+                </MenuItem>
             </MenuItem>
             <MenuItem Header="{localization:Localization Menu_Run}" Command="{Binding RunCommand}" IsEnabled="{Binding IsStopButtonEnabled, Converter={StaticResource InverseBooleanConverter}}" />
             <MenuItem Header="{localization:Localization Menu_Stop}" Command="{Binding StopCommand}" IsEnabled="{Binding IsStopButtonEnabled}" />
