--- a/KID/Views/ConsoleOutputView.xaml
+++ b/KID/Views/ConsoleOutputView.xaml
@@ -14,6 +14,6 @@
              VerticalScrollBarVisibility="Auto"
              FontFamily="Consolas"
              FontSize="13"
-             Background="{StaticResource ConsoleBrush}"
-             Foreground="{StaticResource ConsoleTextBrush}" />
+             Background="{DynamicResource ConsoleBrush}"
+             Foreground="{DynamicResource ConsoleTextBrush}" />
 </UserControl>
