--- a/KID/MainWindow.xaml
+++ b/KID/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="KID.MainWindow"
+<Window x:Class="KID.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit"
@@ -72,7 +72,7 @@
         <views:MenuView x:Name="MenuView" Grid.Row="1" />
 
         <!-- Рабочая зона -->
-        <Grid Grid.Row="2">
+        <Grid x:Name="WorkspaceGrid" Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="5" />
@@ -89,7 +89,7 @@
                           Background="{DynamicResource SplitterBrush}" />
 
             <!-- Вывод -->
-            <Grid Grid.Column="2" Margin="5">
+            <Grid x:Name="OutputGrid" Grid.Column="2" Margin="5">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
                     <RowDefinition Height="5" />
