--- a/KID.WPF.IDE/Views/ConsoleOutputView.xaml
+++ b/KID.WPF.IDE/Views/ConsoleOutputView.xaml
@@ -12,8 +12,8 @@
     <TextBox Name="ConsoleOutputControl"
              IsReadOnly="True"
              VerticalScrollBarVisibility="Auto"
-             FontFamily="Consolas"
-             FontSize="13"
+             FontFamily="{Binding FontFamily}"
+             FontSize="{Binding FontSize}"
              Background="{DynamicResource ConsoleBrush}"
              Foreground="{DynamicResource ConsoleTextBrush}" />
 </UserControl>
